Moved remaining voters set to blockchain class
remaining voters was originally in its own class RemainingVoters which stores the set as a field and had related methods.
now remaining voters existed as a set field in the class Blockchain
this is so that when we attempt to load from persistent storage, we never load one without the other which would bring them out of sync
this could cause:
1. double voting where the blockchain has loaded but the remaining voters has not
2. registered voters unable to vote where remaining voters has loaded but the blockchain has not